--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "md5": "^2.2.1",
+    "moment": "^2.27.0",
     "morgan": "~1.9.1",
     "sqlite3": "^5.0.0"
   }
