--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-router-tabs": "^1.3.2",
     "react-scripts": "3.4.1",
-    "react-tabs": "^3.1.1"
+    "react-tabs": "^3.1.1",
+    "react-toastify": "^6.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
