--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
+    "react-ratings-declarative": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-router-tabs": "^1.3.2",
     "react-scripts": "3.4.1",
