--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
     "react-modal": "^3.11.2",
     "react-ratings-declarative": "^3.4.1",
     "react-router-dom": "^5.2.0",
