--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-d3-graph": "^2.5.0",
+    "react-datepicker": "^3.1.3",
+    "react-datetime-picker": "^3.0.2",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
     "react-modal": "^3.11.2",
@@ -19,6 +21,7 @@
     "react-router-tabs": "^1.3.2",
     "react-scripts": "3.4.1",
     "react-tabs": "^3.1.1",
+    "react-time-picker": "^4.0.1",
     "react-toastify": "^6.0.8"
   },
   "scripts": {
