--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-ratings-declarative": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-router-tabs": "^1.3.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.2",
+    "react-select": "^3.1.0",
     "react-tabs": "^3.1.1",
     "react-time-picker": "^4.0.1",
     "react-toastify": "^6.0.8"
