--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-router-tabs": "^1.3.2",
     "react-scripts": "^3.4.2",
     "react-select": "^3.1.0",
+    "react-sortable-hoc": "^1.11.0",
     "react-tabs": "^3.1.1",
     "react-time-picker": "^4.0.1",
     "react-toastify": "^6.0.8"
