--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,13 @@
     "react-ratings-declarative": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-router-tabs": "^1.3.2",
-    "react-scripts": "^3.4.2",
+    "react-scripts": "^3.4.3",
     "react-select": "^3.1.0",
     "react-sortable-hoc": "^1.11.0",
     "react-tabs": "^3.1.1",
     "react-time-picker": "^4.0.1",
-    "react-toastify": "^6.0.8"
+    "react-toastify": "^6.0.8",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
