--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^3.4.3",
     "react-select": "^3.1.0",
     "react-sortable-hoc": "^1.11.0",
+    "react-table": "^7.7.0",
     "react-tabs": "^3.1.1",
     "react-time-picker": "^4.0.1",
     "react-toastify": "^6.0.8",
