--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:14
 
-RUN apt-get update && apt-get install -y python3
+# RUN apt-get update && apt-get install -y python3
 WORKDIR /app
-COPY . .
-RUN npm i
-
+COPY ["package.json", "package-lock.json", "./"]
+RUN npm ci
+RUN npm rebuild node-sass
