--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-sortable-hoc": "^1.11.0",
     "react-table": "^7.7.0",
     "react-tabs": "^3.1.1",
+    "react-textarea-autosize": "^8.3.3",
     "react-time-picker": "^4.0.1",
     "react-toastify": "^6.0.8",
     "typescript": "^3.9.7"
